Add JDK-27 to benchmark scripts